<resources>
    <string name="app_name">Conversations</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">New conversation</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_refresh">Refresh contact list</string>
    <string name="action_end_conversation">End this conversation</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_muc_details">Conference details</string>
    <string name="action_secure">Secure conversation</string>
    <string name="action_add_account">Add account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_add_phone_book">Add to phone book</string>
    <string name="action_delete_contact">Delete from roster</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_manage_accounts">Manage Accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_conference_details">Conference Details</string>
    <string name="title_activity_contact_details">Contact Details</string>
    <string name="title_activity_conversations">Conversations</string>
    <string name="title_activity_sharewith">Share with Conversation</string>
    <string name="title_activity_start_conversation">Start Conversation</string>
    <string name="title_activity_choose_contact">Choose contact</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <string name="unread_conversations">unread Conversations</string>
    <string name="sending">sending&#8230;</string>
    <string name="announce_pgp">Renew PGP announcement</string>
    <string name="encrypted_message">Decrypting message. Please wait&#8230;</string>
    <string name="conference_details">Conference Details</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="enter_new_name">Enter a new name:</string>
    <string name="remove_contact_text">Would you like to remove %s from your roster? The conversation associated with this contact will not be removed.</string>
    <string name="remove_bookmark_text">Would you like to remove %s as a bookmark? The conversation associated with this bookmark will not be removed.</string>
    <string name="untrusted_cert_hint">The server %s presented you with an untrusted, possible self signed, certificate.</string>
    <string name="account_info">Server Info</string>
    <string name="register_account">Register new account on server</string>
    <string name="share_with">Share with</string>
    <string name="ask_again"><u>Click to ask again</u></string>
    <string name="show_otr_key">OTR fingerprint</string>
    <string name="no_otr_fingerprint">No OTR Fingerprint generated. Just go ahead and start an encrypted conversation</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="invite_contact">Invite Contact</string>
    <string name="contacts">Contacts</string>
    <string name="search_jabber_id">Search or enter Jabber ID</string>
    <string name="choose_account">Choose account</string>
    <string name="multi_user_conference">Multi User Conference</string>
    <string name="trying_join_conference">Are you trying to join a conference?</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="hide">Hide</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="account_offline">Account offline</string>
    <string name="cant_invite_while_offline">You have to be online to invite people to conferences</string>
    <string name="crash_report_title">Conversations has crashed</string>
    <string name="crash_report_message">By sending in stack traces you are helping the ongoing development of Conversations\n<b>Warning:</b> This will use your XMPP account to send the stack trace to the developer.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Unable to connect to account</string>
    <string name="problem_connecting_to_accounts">Unable to connect to multiple accounts</string>
    <string name="touch_to_fix">Touch here to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="not_in_roster">The contact is not in your roster. Would you like to add it?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="send_rejected">rejected</string>
    <string name="receiving_image">Receiving image file. Please wait&#8230;</string>
    <string name="preparing_image">Preparing image for transmission</string>
    <string name="action_clear_history">Clear history</string>
    <string name="clear_conversation_history">Clear Conversation History</string>
    <string name="clear_histor_msg">Do you want to delete all messages within this Conversation?\n\n<b>Warning:</b> This will not influence messages stored on other devices or servers.</string>
    <string name="delete_messages">Delete messages</string>
    <string name="also_end_conversation">End this conversations afterwards</string>
    <string name="choose_presence">Choose presence to contact</string>
    <string name="send_plain_text_message">Send plain text message</string>
    <string name="send_otr_message">Send OTR encrypted message</string>
    <string name="send_pgp_message">Send OpenPGP encrypted message</string>
    <string name="your_nick_has_been_changed">Your nickname has been changed</string>
    <string name="download_image">Download Image</string>
    <string name="error_loading_image">Error loading image (File not found)</string>
    <string name="image_offered_for_download"><i>Image file offered for download</i></string>
    <string name="not_connected">Not Connected</string>
    <string name="otr_messages">OTR encrypted messages</string>
    <string name="manage_account">Manage account</string>
    <string name="contact_offline">Your Contact is Offline</string>
    <string name="contact_offline_otr">Sending OTR encrypted messages to an offline contact is unfortunately not supported.\nWould you like to send the message in plain text?</string>
    <string name="contact_offline_file">Sending files to an offline contact is unfortunately not supported.</string>
    <string name="send_unencrypted">Send unencrypted</string>
    <string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
    <string name="openkeychain_required">OpenKeychain</string>
    <string name="openkeychain_required_long">Conversations utilizes a third party app called <b>OpenKeychain</b> to encrypt and decrypt messages and to manage your public keys.\n\nOpenKeychain is licensed under GPLv3 and available on F-Droid and Google Play.\n\n<small>(Please restart Conversations afterwards.)</small></string>
    <string name="restart">Restart</string>
    <string name="install">Install</string>
    <string name="offering">offering&#8230;</string>
    <string name="waiting">waiting&#8230;</string>
    <string name="no_pgp_key">No OpenPGP Key found</string>
    <string name="contact_has_no_pgp_key">Conversations is unable to encrypt your messages because your contact is not announcing his or hers public key.\n\n<small>Please ask your contact to setup OpenPGP.</small></string>
    <string name="no_pgp_keys">No OpenPGP Keys found</string>
    <string name="contacts_have_no_pgp_keys">Conversations is unable to encrypt your messages because your contacts are not announcing their public key.\n\n<small>Please ask your contacts to setup OpenPGP.</small></string>
    <string name="encrypted_message_received"><i>Encrypted message received. Touch to view and decrypt.</i></string>
    <string name="encrypted_image_received"><i>Encrypted image received. Touch to view and decrypt.</i></string>
    <string name="image_file"><i>Image received. Touch to view</i></string>
    <string name="otr_file_transfer">OTR encryption not available</string>
    <string name="otr_file_transfer_msg">Unfortunaly OTR encryption is not available for file transfer. You can choose either OpenPGP or no encryption.</string>
    <string name="use_pgp_encryption">Use OpenPGP encryption</string>
    <string name="pref_xmpp_resource">XMPP resource</string>
    <string name="pref_xmpp_resource_summary">The name this client identifies itself with</string>
    <string name="pref_accept_files">Accept files</string>
    <string name="pref_accept_files_summary">Automatically accept files smaller than&#8230;</string>
    <string name="pref_notification_settings">Notification Settings</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_summary">Notify when a new message arrives</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Also vibrate when a new message arrives</string>
    <string name="pref_sound">Sound</string>
    <string name="pref_sound_summary">Play ringtone with notification</string>
    <string name="pref_conference_notifications">Conference notifications</string>
    <string name="pref_conference_notifications_summary">Always notify when a new conference message arrives instead of only when highlighted</string>
    <string name="pref_notification_grace_period">Notification grace period</string>
    <string name="pref_notification_grace_period_summary">Disable notifications for a short time after a carbon copy was received</string>
    <string name="pref_ui_options">UI Options</string>
    <string name="pref_use_phone_self_picture">Use Phones self contact picture</string>
    <string name="pref_use_phone_self_picture_summary">You may no longer be able to distinguish which account you are using in a conversation</string>
    <string name="pref_conference_name">Conference name</string>
    <string name="pref_conference_name_summary">Use room’s subject to identify Conferences</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="your_account">Your account</string>
    <string name="keys">Keys</string>
    <string name="send_presence_updates">Send presence updates</string>
    <string name="receive_presence_updates">Receive presence updates</string>
    <string name="account_settings_jabber_id">Jabber ID</string>
    <string name="account_settings_password">Password</string>
    <string name="account_settings_example_jabber_id">username@example.com</string>
    <string name="account_settings_confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="search">Search</string>
    <string name="create_contact">Create Contact</string>
    <string name="conference_address">Conference address</string>
    <string name="save_as_bookmark">Save as bookmark</string>
    <string name="touch_to_choose_picture">Touch avatar to select picture from gallery</string>
    <string name="publish_avatar_explanation">Please note: Everyone subscribed to your presence updates will be allowed to see this picture.</string>
    <string name="or_long_press_for_default">(Or long press to bring back default)</string>
</resources>