<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="collapseActionView|always"
        android:title="@string/search"/>
    
    <item
        android:id="@+id/action_create_contact"
        android:icon="@drawable/ic_action_add_person"
        android:showAsAction="always"
        android:title="@string/create_contact"/>
    <item
        android:id="@+id/action_create_conference"
        android:icon="@drawable/ic_action_add_group"
        android:showAsAction="always"
        android:title="@string/create_conference"/>
    
    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/action_accounts"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>