<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primarybackground" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_settings_jabber_id"
            android:textSize="14sp"
            android:textColor="@color/primarytext"/>

        <AutoCompleteTextView
            android:id="@+id/account_jid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_settings_example_jabber_id"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/account_settings_password"
            android:textSize="14sp"
            android:textColor="@color/primarytext"/>

        <EditText
            android:id="@+id/account_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/account_register_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register_account"
            android:textSize="14sp"
            android:textColor="@color/primarytext"/>

        <TextView
            android:id="@+id/account_confirm_password_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_settings_confirm_password"
            android:textSize="14sp"
            android:textColor="@color/primarytext"
            android:visibility="gone" />

        <EditText
            android:id="@+id/account_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/primarytext" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/divider" />

        <Button
            android:id="@+id/save_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/save"
            android:textColor="@color/secondarytext" />
    </LinearLayout>

</RelativeLayout>