<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="#e5e5e5">

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

     <TextView
        style="@style/sectionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/action_contact_details" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="88dp"
        android:padding="8dp">

        <QuickContactBadge
            android:id="@+id/details_contact_badge"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:id="@+id/details_jidbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/details_contact_badge"
            android:orientation="vertical"
            android:paddingLeft="8dp" >

            <TextView
                android:id="@+id/details_contactjid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="#5b5b5b"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/details_contactstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/details_lastseen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="#5b5b5b"
                android:textSize="14sp" />
        </LinearLayout>
          
    </RelativeLayout>

  
   <TextView
        style="@style/sectionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/your_account" />
    <TextView
        android:id="@+id/details_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:textSize="18sp"
        android:textColor="#5b5b5b" />
   <TextView
        style="@style/sectionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/subscriptions" />

    <CheckBox
        android:id="@+id/details_send_presence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_presence_updates"
        android:textSize="18sp"
        android:textColor="#5b5b5b" />

        <CheckBox
        android:id="@+id/details_receive_presence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive_presence_updates"
        android:textSize="18sp"
        android:textColor="#5b5b5b" />
        
	<TextView 
	    android:id="@+id/ask_again"
	    android:paddingTop="8dp"
	    android:paddingLeft="32dp"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_again"
        android:textColor="#33B5E5"
        android:textSize="18sp"
        android:visibility="gone"
	    />
 <TextView
        style="@style/sectionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/keys" />

 <LinearLayout
     android:id="@+id/details_contact_keys"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:divider="?android:dividerHorizontal"
        android:showDividers="middle">
 </LinearLayout>
    
</LinearLayout>
</ScrollView>