<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

     <TextView
        android:id="@+id/your_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="?attr/TextSizeBody"
        android:textColor="@color/primarytext"
        android:text="@string/your_account" />
    <Spinner
        android:id="@+id/account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

     <TextView
        android:id="@+id/jabber_id"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="?attr/TextSizeBody"
        android:textColor="@color/primarytext"
        android:text="@string/account_settings_jabber_id" />
    
    <AutoCompleteTextView
        android:id="@+id/jid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/account_settings_example_jabber_id"
        android:textColorHint="@color/secondarytext"
        android:textColor="@color/primarytext"
        />
</LinearLayout>
