<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="16dp">

        <TextView
            style="@style/InputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_account"/>

        <Spinner
            android:id="@+id/account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_jid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/conference_address"
            app:hintTextAppearance="@style/TextAppearance.Conversations.Design.Hint"
            app:errorTextAppearance="@style/TextAppearance.Conversations.Design.Error">

            <AutoCompleteTextView
                android:id="@+id/jid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                style="@style/Widget.Conversations.EditText"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/save_as_bookmark"/>
    </LinearLayout>
</layout>
