<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primarybackground" >

    <LinearLayout
        android:id="@+id/account_image_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/message_border" >

        <ImageView
            android:id="@+id/account_image"
            android:layout_width="194dp"
            android:layout_height="194dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_image_wrapper"
        android:layout_centerHorizontal="true"
        android:text="@string/touch_to_choose_picture"
        android:textColor="@color/secondarytext" />

    <TextView
        android:id="@+id/secondary_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint"
        android:layout_centerHorizontal="true"
        android:text="@string/or_long_press_for_default"
        android:textColor="@color/secondarytext" />

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/primarytext" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/divider" />

        <Button
            android:id="@+id/publish_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/publish"
            android:textColor="@color/secondarytext" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_above="@+id/button_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/secondary_hint"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primarytext"
            android:textSize="?attr/TextSizeHeadline" />

        <TextView
            android:id="@+id/hint_or_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minLines="3"
            android:text="@string/publish_avatar_explanation"
            android:textColor="@color/primarytext"
            android:textSize="?attr/TextSizeBody" />
    </LinearLayout>

</RelativeLayout>